Adds ability to add new schools

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a ui-sref="user"><i id="user-setup" class="fa fa-comment-o"></i></a>
               </div>
               <div class="col-xs-3">
-                <i class="fa fa-plus" ng-if="showAdd"></i>
+                <a ui-sref="school.new"><i class="fa fa-plus" ng-if="showAdd"></i></a>
               </div>
             </div>
             <div class="row">
