Adds login link at start of onboarding

--- a/src/directives/onboarding.html
+++ b/src/directives/onboarding.html
@@ -4,6 +4,7 @@
     <div ng-if="obStep === 1" class="ob1 col-xs-12">
       <p><i class="fa fa-flag"></i></p>
       <p>Hi, I'm YadaGuru and I'm here to get your college applications done.</p>
+      <a ui-sref="login"><p class="skip-to-login">Already setup? Tap here to login.</p></a>
     </div>
 
     <div ng-if="obStep === 2" class="ob2 col-xs-12">
