Adds forgot login flow

--- a/src/login/login.html
+++ b/src/login/login.html
@@ -35,6 +35,7 @@
               ng-disabled="loginForm.$invalid"
               ng-click="submitLogin()">LOGIN
       </button>
+      <p class="forgot-login-link"><a ui-sref="user.login-update({next: 'login'})">Forgot Your Login Code?</a></p>
     </form>
   </div>
 </main>
