Fixes ordering of deleting tables in api server

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <footer>
             <div class="row panel footer-toolbar">
               <div class="col-xs-6 col-xs-offset-3">
-                <i class="fa fa-clock-o"></i>
+                <a ui-sref="school"><i class="fa fa-clock-o"></i></a>
                 <a ui-sref="user"><i id="user-setup" class="fa fa-comment-o"></i></a>
               </div>
               <div class="col-xs-3">
