--- a/src/school/school.html
+++ b/src/school/school.html
@@ -17,7 +17,7 @@
     </div>
   </div>
 </main>
-<tour step="currentStep" tour-complete="showPhoneOptOutModal()">
+<tour step="currentStep">
   <virtual-step tourtip="Click here to manage your text messages"
                 tourtip-element="#user-setup"
                 tourtip-placement="center"
