--- a/src/login/login.html
+++ b/src/login/login.html
@@ -1,41 +1,49 @@
 <main class="row login-view">
   <div class="onboarding-container">
-    <p>Welcome to YadaGuru. <br>Please Login </p>
-    <form name="loginForm">
-      <div class="form-group">
-        <label for="login-phone-number">Enter your Phone Number.</label>
-        <input type="text"
-               class="form-control"
-               id="login-phone-number"
-               ng-model="$parent.phoneNumber"
-               required
-               name="phoneNumber"
-               ui-mask-placeholder
-               ui-mask="(999) 999-9999"
-               ng-minlength="10" />
-      </div>
-      <div class="form-group">
-        <label for="login-personal-code">
-          Enter your Personal Code.
-        </label>
-        <input type="text"
-               class="form-control"
-               placeholder="personal code"
-               id="login-personal-code"
-               name="personalCode"
-               ng-model="$parent.personalCode"
-               ng-minlength="6"
-               ng-maxlength="6"
-               ng-pattern="/\d{6}/"
-               required>
-      </div>
-      <button type="submit"
-              class="btn btn-primary"
-              ng-class="{disabled: loginForm.$invalid}"
-              ng-disabled="loginForm.$invalid"
-              ng-click="submitLogin()">LOGIN
-      </button>
-      <p class="forgot-login-link"><a ui-sref="user.login-update({next: 'login'})">Forgot Your Login Code?</a></p>
-    </form>
+    <div class="login-step-1" ng-show="loginStep === 1">
+      <p>Welcome to YadaGuru. <br>Please Login </p>
+      <form name="loginForm">
+        <div class="form-group">
+          <label for="login-phone-number">Enter your Phone Number.</label>
+          <input type="text"
+                 class="form-control"
+                 id="login-phone-number"
+                 ng-model="$parent.phoneNumber"
+                 required
+                 name="phoneNumber"
+                 ui-mask-placeholder
+                 ui-mask="(999) 999-9999"
+                 ng-minlength="10" />
+        </div>
+        <button type="submit"
+                class="btn btn-primary"
+                ng-class="{disabled: loginForm.$invalid}"
+                ng-disabled="loginForm.$invalid"
+                ng-click="submitPhone()">LOGIN
+        </button>
+      </form>
+    </div>
+    <div class="login-step-2" ng-show="loginStep === 2">
+      <p>
+        Enter the code we sent you here.
+      </p>
+      <form name="codesAddForm">
+        <div class="form-group">
+          <input type="text"
+                 class="form-control"
+                 placeholder="123456"
+                 id="confirm-code"
+                 name="confirmCode"
+                 ng-model="$parent.confirmCode"
+                 required>
+        </div>
+        <button type="submit"
+                class="btn btn-primary"
+                ng-class="{disabled: codesAddForm.$invalid}"
+                ng-disabled="codesAddForm.$invalid"
+                ng-click="submitCode()">OK NEXT
+        </button>
+      </form>
+    </div>
   </div>
 </main>
