--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
           <div ui-view></div>
           <footer>
             <div class="row panel footer-toolbar">
-              <div class="col-xs-6 col-xs-offset-3">
+              <div class="col-xs-3">
+                <i ng-click="saveAsPdf()" class="fa fa-file-text-o" ng-if="showPrint"></i>
+              </div>
+              <div class="col-xs-6">
                 <a ui-sref="school"><i class="fa fa-clock-o"></i></a>
                 <a ui-sref="user"><i id="user-setup" class="fa fa-comment-o"></i></a>
               </div>
