Adds /index.html to watch paths

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <![endif]-->
     <div class="container">
       <div class="row">
-        <div class="col-sm-4 col-sm-offset-4">
+        <div class="col-sm-12">
           <header>
             <div class="row panel">
               <div class="col-xs-2 no-padding">
