--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--[if lt IE 8]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-sm-12">
           <header>
@@ -29,7 +29,8 @@
                      title="YadaGuru: College Application Reminders" class="small-logo">
               </div>
               <div class="col-xs-8 no-padding">
-                <h1>My Reminders</h1>
+                <h1 ng-if="!isAdmin" ng-cloak>My Reminders</h1>
+                <h1 ng-if="isAdmin" ng-cloak>YadaGuru Administration Panel</h1>
               </div>
               <div class="col-xs-2 no-padding">
                 <a href="https://codeforphilly.org/">
@@ -38,14 +39,14 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-xs-2 col-xs-offset-10">
+              <div class="col-xs-2 col-xs-offset-10" ng-if="!isAdmin">
                 <i class="fa fa-question-circle" ng-click="showHelp(currentState)"></i>
               </div>
             </div>
           </header>
-          <div ui-view></div>
+          <div class="ui-viewer" ui-view></div>
           <footer>
-            <div class="row panel footer-toolbar">
+            <div class="row panel footer-toolbar" ng-if="!isAdmin">
               <div class="col-xs-3">
                 <i ng-click="saveAsPdf()" class="fa fa-file-text-o" ng-if="showPrint"></i>
               </div>
