--- a/src/faqs/faqs.html
+++ b/src/faqs/faqs.html
@@ -1,5 +1,5 @@
 <main class="row faq-view">
-  <div class="col-xs-12">
+  <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
     <h2 class="content-panel-header">Contact Us</h2>
     <div class="panel content-panel" ng-bind-html="contact"></div>
     <h2 class="content-panel-header">FAQs</h2>
