--- a/src/reminder/reminder.html
+++ b/src/reminder/reminder.html
@@ -1,5 +1,5 @@
 <main class="row reminder-view">
-  <div class="col-xs-12">
+  <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
     <nav-links></nav-links>
     <div class="row">
       <div class="col-xs-12">
