--- a/src/user/sponsor-update/sponsorUpdate.html
+++ b/src/user/sponsor-update/sponsorUpdate.html
@@ -1,5 +1,5 @@
 <main class="row user-view user-sponsor-update-view">
-  <div class="col-xs-12">
+  <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
     <form name="sponsorUpdateForm">
       <div class="form-group">
         <label for="sponsor-code">
