--- a/src/user/user.html
+++ b/src/user/user.html
@@ -1,6 +1,6 @@
 <main class="row user-view" ng-if="isUserMenu">
   <div class="sms-edit-menu">
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
       <h2><a ui-sref="user.sponsor-update">I want to add a sponsor code</a></h2>
       <h2 ng-click="showForgetConfirmation()">Forget my mobile phone number</h2>
     </div>
