Makes login work. Connects schools and reminders to API

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
   <script src="/vendor/angular-tour/dist/angular-tour.min.js"></script>
   <script src="/vendor/bootstrap-switch/dist/js/bootstrap-switch.min.js"></script>
   <script src="/vendor/angular-bootstrap-switch/dist/angular-bootstrap-switch.min.js"></script>
+  <script src="/vendor/angular-local-storage/dist/angular-local-storage.min.js"></script>
   <script src="https://apis.google.com/js/client.js"></script>
 
   <script src="/dist/ngConstants.js"></script>
