--- a/src/reminder/reminder.html
+++ b/src/reminder/reminder.html
@@ -8,12 +8,12 @@
           <p class="school-date">{{ date }}</p>
         </div>
         <div ng-repeat="timeframe in reminderGroups" class="date-group">
-          <h2 role="button" ng-click="timeframe.isCollapsed = !timeframe.isCollapsed">{{ timeframe.timeframe }}</h2>
+          <h2 role="button" ng-click="timeframe.isCollapsed = !timeframe.isCollapsed">{{ timeframe.dueDate }}</h2>
           <div collapse="timeframe.isCollapsed">
             <div ng-repeat="reminder in timeframe.reminders" class="reminder-group">
               <h3 role="button" ng-click="reminder.isCollapsed = !reminder.isCollapsed">{{ reminder.name }}</h3>
               <div collapse="!reminder.isCollapsed" class="reminder-info">
-                <p class="reminder-message">{{ reminder.message }}</p>
+                <p class="reminder-message" ng-bind-html="reminder.message"></p>
                 <p class="reminder-detail" ng-bind-html="reminder.detail"></p>
               </div>
             </div>
