Makes all API connections, rudimentary error handling, cleans up files, happy path testing passes

--- a/src/school/school.html
+++ b/src/school/school.html
@@ -1,5 +1,5 @@
 <onboarding ng-if="isOnboarding"></onboarding>
-<main class="row school-view" ng-if="currentState === 'school'">
+<main class="row school-view">
   <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
     <nav-links></nav-links>
     <div ng-repeat="school in schools">
