Add cancel button and style for /schools/new page.

--- a/src/school/new/new.html
+++ b/src/school/new/new.html
@@ -36,5 +36,6 @@
     <p class="info-text" ng-click="faqModal('faq-regular-admissions')" role="button">What's 'Regular Admissions?'</p>
     <p class="info-text" ng-click="faqModal('faq-rolling-admissions')" role="button">What About Rolling Admission?</p>
     <p class="info-text" ng-click="faqModal('faq-early-action')" role="button">Do you do Early Action/Decision?</p>
+    <button class="btn btn-primary btn-cancel" onclick="window.history.go(-1); return false;">Cancel</button>
   </div>
 </main>
