--- a/src/school/new/new.html
+++ b/src/school/new/new.html
@@ -30,12 +30,15 @@
               ng-disabled="newSchoolForm.$invalid"
               ng-click="submitSchool()">OK NEXT
       </button>
+      <button type="cancel"
+              class="btn btn-primary btn-cancel"
+              onclick="window.history.go(-1); return false;">CANCEL
+      </button>
     </form>
     <p class="info-text" ng-click="faqModal('faq-app-submission-date')" role="button">What's an Application Submission Date?</p>
     <p class="info-text" ng-click="faqModal('faq-app-find')" role="button">Where do I find it?</p>
     <p class="info-text" ng-click="faqModal('faq-regular-admissions')" role="button">What's 'Regular Admissions?'</p>
     <p class="info-text" ng-click="faqModal('faq-rolling-admissions')" role="button">What About Rolling Admission?</p>
     <p class="info-text" ng-click="faqModal('faq-early-action')" role="button">Do you do Early Action/Decision?</p>
-    <button class="btn btn-primary btn-cancel" onclick="window.history.go(-1); return false;">Cancel</button>
   </div>
 </main>
