--- a/src/login/login.html
+++ b/src/login/login.html
@@ -22,6 +22,8 @@
                 ng-click="submitPhone()">LOGIN
         </button>
       </form>
+      <p>or</p>
+      <a href="/" class="btn btn-primary">Create an Account</a>
     </div>
     <div class="login-step-2" ng-show="loginStep === 2">
       <p>
