Ensure more content is available on mobile, esp iPhone5/6 heights #79 #130

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
         <div class="col-sm-12">
           <header>
             <div class="row panel">
-              <div class="col-xs-2 no-padding">
+              <div class="col-xs-2 no-padding logo">
                 <img src="/assets/yg-square.png" alt="YadaGuru: College Application Reminders"
                      title="YadaGuru: College Application Reminders" class="small-logo">
               </div>
-              <div class="col-xs-8 no-padding">
+              <div class="col-xs-8 no-padding app-name">
                 <h1 ng-if="!isAdmin" ng-cloak>My Reminders</h1>
                 <h1 ng-if="isAdmin" ng-cloak>YadaGuru Administration Panel</h1>
               </div>
-              <div class="col-xs-2 no-padding">
+              <div class="col-xs-2 no-padding sponsor-logo">
                 <a href="https://codeforphilly.org/">
                   <img src="/assets/CFPLogo.png" class="logo" alt="Brought to you by Code for Philly" />
                 </a>
