138 Adds meaningful action to Create Account button on login screen

--- a/src/login/login.html
+++ b/src/login/login.html
@@ -23,7 +23,9 @@
         </button>
       </form>
       <p>or</p>
-      <a href="/" class="btn btn-primary">Create an Account</a>
+      <button class="btn btn-primary" ng-click="beginOnboarding()">
+        Create an Account
+      </button>
     </div>
     <div class="login-step-2" ng-show="loginStep === 2">
       <p>
