--- a/src/directives/onboarding.html
+++ b/src/directives/onboarding.html
@@ -4,14 +4,20 @@
     <div ng-if="obStep === 1" class="ob1 col-xs-12">
       <p><i class="fa fa-flag"></i></p>
       <p>Hi, I'm YadaGuru and I'm here to get your college applications done.</p>
-      <button type="button" class="btn btn-primary login-btn"
-        ui-sref="login" ng-click="endOnboarding()">Login</button>
+      <button type="button" class="btn btn-primary btn-onboarding-desktop"
+        ng-click="advanceOb()">Create an Account</button>
       <p class="intro-divider">or</p>
+      <button type="button" class="btn btn-primary login-btn btn-onboarding-desktop"
+        ui-sref="login" ng-click="endOnboarding()">Login</button>
     </div>
 
     <div ng-if="obStep === 2" class="ob2 col-xs-12">
       <p><i class="fa fa-clock-o"></i></p>
       <p>I'll send you text reminders about all the things you need to do.</p>
+      <button type="button" class="btn btn-primary btn-onboarding-desktop"
+        ng-click="rewindOb()">Back</button>
+      <button type="button" class="btn btn-primary btn-onboarding-desktop"
+        ng-click="advanceOb()">Next</button>
     </div>
 
     <div ng-if="obStep === 3" class="ob3 col-xs-12">
@@ -44,6 +50,8 @@
         for these costs. Please see our Privacy Policy for more information about
         how we use your mobile number.
       </div>
+      <button type="button" class="btn btn-primary btn-onboarding-desktop"
+        ng-click="rewindOb()">Back</button>
     </div>
 
     <div ng-if="obStep === 4" class="ob4 col-xs-12">
@@ -137,23 +145,6 @@
       >
         Got It
       </button>
-    </div>
-  </div>
-  <div class="row ob-nav">
-      <button
-      type="button"
-      class="btn btn-primary btn-onboarding-desktop"
-      ng-click="rewindOb(1)"
-      ng-if="isBackButtonVisible()">Back</button>
-      <button
-      type="button"
-      class="btn btn-primary btn-onboarding-desktop"
-      ng-click="advanceOb()"
-      ng-if="isNextButtonVisible()">{{ obStep === 1 ? "Create an Account" : "Next"}}</button>
-  </div>
-  <div class="row ob-progress">
-    <div class="col-xs-12">
-      <progress-dots max="8" value="obStep" class="progress-dots"></progress-dots>
     </div>
   </div>
 </div>
