147 Fixes CSS on login form. Removes swipe actions from onboarding

--- a/src/directives/onboarding.html
+++ b/src/directives/onboarding.html
@@ -1,4 +1,4 @@
-<div ng-swipe-left="advanceOb()" ng-swipe-right="rewindOb()" class="container-fluid onboarding-container">
+<div class="container-fluid onboarding-container">
   <div class="row ob-main">
 
     <div ng-if="obStep === 1" class="ob ob1 col-xs-12">
