--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
   </script>
   <!-- End Google Analytics -->
 
+  <script src="/vendor/jsnlog/jsnlog.min.js"></script>
   <script src="/vendor/jquery/dist/jquery.min.js"></script>
   <script src="/vendor/file-saver.js/FileSaver.js"></script>
   <script src="/vendor/pdfmake/build/pdfmake.js"></script>
