170 Changes date placeholders to mm/dd/yyyy

--- a/src/school/new/new.html
+++ b/src/school/new/new.html
@@ -22,7 +22,7 @@
                     min-date="minDate"
                     init-date="initDate"
                     required
-                    placeholder="2/1/2016" />
+                    placeholder="mm/dd/yyyy" />
               </div>
             </div>
           </div>
