--- a/src/directives/onboarding.html
+++ b/src/directives/onboarding.html
@@ -106,7 +106,7 @@
                 is-open="datepickerOpen"
                 min-date="minDate"
                 init-date="initDate"
-                placeholder="2/1/2016" />
+                placeholder="mm/dd/yyyy" />
           </div>
           <div class="input-group-addon" ng-class="{disabled: !submissionDate}" role="button" ng-click="submitSchool()">OK NEXT</div>
         </div>
