111 Sets a minimum date of date on onboarding/new school submission date

--- a/src/directives/onboarding.html
+++ b/src/directives/onboarding.html
@@ -108,7 +108,15 @@
                 init-date="initDate"
                 placeholder="mm/dd/yyyy" />
           </div>
-          <div class="input-group-addon" ng-class="{disabled: !submissionDate}" role="button" ng-click="submitSchool()">OK NEXT</div>
+          <div 
+            class="input-group-addon" 
+            ng-class="{disabled: !validateSubmissionDate()}" 
+            ng-disabled="!validateSubmissionDate()"
+            role="button" 
+            ng-click="submitSchool()"
+          >
+            OK NEXT
+          </div>
         </div>
       </div>
       <p class="info-text" ng-click="faqModal('faq-app-submission-date')" role="button">What's an Application Submission Date?</p>
