--- a/src/school/new/new.html
+++ b/src/school/new/new.html
@@ -33,8 +33,8 @@
             </button>
             <button type="submit"
                     class="btn btn-primary"
-                    ng-class="{disabled: newSchoolForm.$invalid}"
-                    ng-disabled="newSchoolForm.$invalid"
+                    ng-class="{disabled: !validateForm()}"
+                    ng-disabled="!validateForm()"
                     ng-click="submitSchool()">OK NEXT
             </button>
           </div>
