135 135 Completes asset pipeline

--- a/src/directives/navLinks.html
+++ b/src/directives/navLinks.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-12 nav-links">
+  <div class="col-xs-12 yg-nav-links">
     <a ui-sref="reminder">View by Date</a> |
     <a ui-sref="school">View by School</a>
   </div>
