--- a/src/directives/onboarding.html
+++ b/src/directives/onboarding.html
@@ -154,7 +154,7 @@
       <button
         type="button"
         class="btn btn-primary btn-onboarding-desktop"
-        ng-click="endOnboarding()"
+        ng-click="completeOnboarding()"
       >
         Got It
       </button>
