--- a/src/school/new/new.html
+++ b/src/school/new/new.html
@@ -10,7 +10,14 @@
           <div class="form-group">
             <label for="school-name">Enter the School's Application Submission Date</label>
             <div class="input-group">
-              <div class="input-group-addon" role="button" ng-click="datepickerOpen = !datepickerOpen"><i class="fa fa-calendar"></i></div>
+              <span class="input-group-btn">
+                <button class="btn btn-primary"
+                    type="button"
+                    ng-click="openDatepicker($event)"
+                >
+                  <i class="fa fa-calendar"></i>
+                </button>
+              </span>
               <div class="datepicker-position">
                 <input
                     type="text"
