189 Implements new final onboarding image/copy

--- a/src/directives/onboarding.html
+++ b/src/directives/onboarding.html
@@ -142,28 +142,29 @@
     </div>
 
     <div ng-if="obStep === 7" class="ob ob7 col-xs-12">
-      <h2>
-        Yay!
-      </h2>
-      <p>
+      <p class="small">
+        Yay!<br>
         Your first school is setup.<br>
-        Reminder text messages will start coming soon. To see the plan, tap the school name.
+        Reminder text messages will start coming soon.
       </p>
       <p>
-        A few directions:
+        <u>TIP: FROM NOW ON:</u>
+      </p>
+      <p class="big">
+        <span class="text-uppercase">Tap</span> the <span class="text-uppercase">School</span>
+      </p>
+      <img src="assets/images/school-help.png" alt="School card on the school menu" />
+      <p>
+        For <span class="text-uppercase">Reminders</span>
       </p>
       <ul class="onboarding-icon-help">
         <li>
-          <i class="fa fa-clock-o"></i>
-          Tap the clock to see all the school plans
+          <i class="fa fa-plus" aria-hidden="true"></i>
+          <span class="sr-only">Press the plus icon</span>To <span class="text-uppercase">Add Schools</span>
         </li>
         <li>
-          <i class="fa fa-plus"></i>
-          Tap the plus sign to add more schools
-        </li>
-        <li>
-          <i class="fa fa-comment-o"></i>
-          Tap the bubble to see other options
+          <i class="fa fa-clock-o" aria-hidden="true"></i>
+          <span class="sr-only">Press the clock icon</span> To <span class="text-uppercase">See All Plans</span>
         </li>
       </ul>
       <button
