190 Changes About Yadaguru link text to FAQ

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
             <div class="row">
               <div class="footer-links col-xs-12">
                 <a ui-sref="privacy">Privacy Policy</a> |
-                <a ui-sref="faqs">About YadaGuru</a> |
+                <a ui-sref="faqs">FAQ</a> |
                 <a ui-sref="disclaimer">Disclaimer</a> |
                 <span class="footer-link" ng-click="logout()">LOGOUT</span>
               </div>
